--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
@@ -144,6 +144,8 @@
       display: flex;
       flex-direction: column;
       margin-bottom: 15px;
+      justify-content: space-between;
+      flex-direction: row;
       ::ng-deep {
 
         .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background,
@@ -175,7 +177,19 @@
         margin: 0;
         margin-left: 40px;
       }
-
+      &-wrapper{
+        display: flex;
+        justify-content: space-between;
+      }
+      &-column {
+        flex-direction: column;
+      }
+      .extra-features__price{
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 131%;
+        color: #323C47;
+      }
     }
   }
 }
@@ -343,6 +357,7 @@
         font-size: 15px;
       }
     }
+    
   }
   &__service-price{
     padding-bottom: 0;
