--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -75,7 +75,7 @@
 
           </ul>
         </form>
-        <div class="btn-order-service 2" (click)="orderService(package)" >
+        <div class="btn-order-service 2" (click)="goCheckout(package)" >
           Заказать услугу <span>(за {{ offerData[package].price }} ₴)</span>
         </div>
       </div>
