--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
@@ -101,6 +101,16 @@
     }
     &:nth-child(1){
       z-index: 5;
+      cursor: pointer;
+      &:hover{
+        background-color: #3C7EEA;
+        h4{
+          color: #fff;
+        }
+        &:after{
+          background-image: url(/assets/images/svg/triangle-blue.svg);
+        }
+      }
     }
     &:nth-child(2){
       z-index: 3;
