--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
@@ -152,7 +152,7 @@
     width: 130%;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgb(162, 166, 173);
+    background-color: #EBEEFF;
   }
 }
 //--------------------------- selects styling -----------------------------
