--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -83,7 +83,7 @@
 
   </div>
 
-  <div class="btn-options compare">
+  <div class="btn-options compare" (click)="goCompareTable()"> 
     <span>Cравнить пакеты услуг</span>
   </div>
 </div>
