--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.html
@@ -7,7 +7,7 @@
 
       <div class="fields">
         <h5 class="fields-title">Ваш текущий e-mail</h5>
-        <input class="fields-value" type="text" formControlName="oldMail" maxlength="25">
+        <input class="fields-value" type="text" formControlName="oldMail" maxlength="25" [value] = 'this.mailForm.value.oldMail'>
         <div class="succes-message" *ngIf="submitedMailForm && changeMailResult" >
           Ответ положительный. Міло изменен
         </div>
