--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -2,7 +2,7 @@
 <app-categories-header></app-categories-header>
 <div class="wrapper">
   <div class="bread-crumbs">
-    <ul *ngIf="catalogFilters.subCategoryc && offersList">
+    <ul *ngIf="catalogFilters.subCategory && offersList">
       <li><a [routerLink]="['/'] | localize">Главная</a></li>
       <li><a [routerLink]="['/' + 'catalog/' + category] | localize">{{ category }}</a></li>
       <li><a>{{ offersList.name }}</a></li>
